# mocap-rs

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
.github/workflows/: deploy.yml
public/: manifest.json
public/models/: index.json
scripts/: fetch-assets.sh
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  lib.rs  main.rs  net.rs  server.rs  session.rs  tls.rs
src/components/: AvatarCanvas.tsx  AvatarLoader.tsx  Controls.tsx  PairPanel.tsx  SettingsPanel.tsx  StatusBar.tsx
src/hooks/: useLandmarks.ts  useWebSocket.ts
src/lib/: assets.ts  avatarController.ts  landmarks.ts  oneEuro.ts  poseSolver.ts  tracker.ts
src/pages/: Desktop.tsx  Gallery.tsx  Landing.tsx  Phone.tsx  Studio.tsx
src/styles/: App.css
